--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "phpunit/phpunit": "^10",
         "phpstan/phpstan-deprecation-rules": "^2.0",
         "vimeo/psalm": "^0.3.14",
-        "laravel/pint": "^1.21"
+        "laravel/pint": "^1.21",
+        "symfony/var-dumper": "^7.2"
     },
     "autoload": {
         "psr-4": {
