--- a/compose.yaml
+++ b/compose.yaml
@@ -4,12 +4,15 @@ services:
     volumes:
     - .:/app:rw
     working_dir: /app
+    depends_on:
+      - keycloak
 
   keycloak:
-    image: quay.io/keycloak/keycloak:26.0.0
+    image: quay.io/keycloak/keycloak:26.1.3
     command: start-dev
+    platform: linux/amd64
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
     ports:
-      - '8080:8080'
+      - '8088:8080'
