feat: map types.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,8 @@ parameters:
   level: 7
   ignoreErrors:
     - identifier: missingType.generics
+    - identifier: missingType.iterableValue
+      path: src/Representation/Realm.php
   paths:
     - src
 
