--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "guzzlehttp/guzzle": "^7.9",
         "lcobucci/jwt": "^5.5",
         "symfony/serializer": "^7.2",
-        "symfony/property-access": "^7.2"
+        "symfony/property-access": "^7.2",
+        "symfony/cache": "^7.2",
+        "psr/simple-cache": "^3.0"
     },
     "require-dev": {
         "phpmetrics/phpmetrics": "^v3.0.0rc8",
@@ -36,10 +38,10 @@
             "name": "Frederik Schmitt",
             "email": "frederik.schmitt96@gmail.com"
         },
-      {
-        "name": "Overtrue",
-        "email": "anzhengchao@gmail.com"
-      }
+        {
+            "name": "Overtrue",
+            "email": "anzhengchao@gmail.com"
+        }
     ],
     "scripts": {
         "analyze": [
@@ -55,7 +57,10 @@
             "@test:integration"
         ],
         "test:unit": "vendor/bin/phpunit --testsuite unit",
-        "test:integration": "vendor/bin/phpunit --testsuite integration"
+        "test:integration": "vendor/bin/phpunit --testsuite integration",
+        "docs:api": "php scripts/generate-api-docs.php",
+        "docs:update-readme": "php scripts/update-readme-api.php",
+        "docs:init": "php scripts/init-api-docs.php"
     },
     "scripts-descriptions": {
         "analyze": "Run phpstan and psalm analysis",
@@ -63,6 +68,9 @@
         "psalm": "Run psalm",
         "test": "Run unit and integration tests",
         "test:unit": "Run unit tests",
-        "test:integration": "Run integration tests (requires a fresh and running Keycloak instance)"
+        "test:integration": "Run integration tests (requires a fresh and running Keycloak instance)",
+        "docs:api": "Generate API documentation tables",
+        "docs:update-readme": "Update README.md with latest API documentation",
+        "docs:init": "Initialize API documentation markers in README.md"
     }
 }
